--- a/config/proj1/dev.yaml
+++ b/config/proj1/dev.yaml
@@ -1,3 +1,3 @@
 - env: dev
   name: service1
-  repoURL: https://github.com/savinp/service1-repo.git
+  repoURL: https://github.com/savinp/shared-helm-chart
