--- a/config/proj1/dev.yaml
+++ b/config/proj1/dev.yaml
@@ -1,6 +1,4 @@
-namespace: dev # 🔥 Define namespace once at the top
-
-services:
-  - env: dev
-    name: service1
-    repoURL: https://github.com/savinp/service1-repo.git
+- env: dev
+  namespace: dev 
+  name: service1
+  repoURL: https://github.com/savinp/service1-repo.git
