--- a/config/proj2/test.yaml
+++ b/config/proj2/test.yaml
@@ -1,5 +1,5 @@
-namespace: test1
-services:
-- env: test
-  name: service2
-  repoURL: https://github.com/savinp/service2-repo.git
+#namespace: test1
+#services:
+#- env: test
+#  name: service2
+#  repoURL: https://github.com/savinp/service2-repo.git
