--- a/config/proj2/test.yaml
+++ b/config/proj2/test.yaml
@@ -1,5 +1,3 @@
-#namespace: test1
-#services:
-#- env: test
-#  name: service2
-#  repoURL: https://github.com/savinp/service2-repo.git
+- env: test
+  name: service2
+  repoURL: https://github.com/savinp/service2-repo.git 
