--- a/config/proj1/dev.yaml
+++ b/config/proj1/dev.yaml
@@ -1,4 +1,6 @@
-- env: dev
-  name: service1
-  ns: dev
-  repoURL: https://github.com/savinp/service1-repo.git
+ns: dev
+
+services:
+  - env: dev
+    name: service1
+    repoURL: https://github.com/savinp/service1-repo.git  
