--- a/config/proj2/test.yaml
+++ b/config/proj2/test.yaml
@@ -1,4 +1,4 @@
 - env: test
   ns: test-ns
-  name: service2
-  repoURL: https://github.com/savinp/service2-repo.git
+  name: my-helm-repo
+  repoURL: https://github.com/savinp/my-helm-repo
