--- a/config/proj2/test.yaml
+++ b/config/proj2/test.yaml
@@ -1,4 +1,4 @@
 - env: test
   ns: test-ns
-  name: my-helm-repo
-  repoURL: https://github.com/savinp/my-helm-repo
+  name: shared-helm-chart
+  repoURL: https://github.com/savinp/shared-helm-chart
